Fix LyricsPlus buttons from disappearing behind player bar
This fixes #285

--- a/src/user.css
+++ b/src/user.css
@@ -2502,6 +2502,7 @@ button.arrow-btn {
 .lyrics-lyricsContainer-LyricsContainer {
   --lyrics-color-active: white !important;
   --lyrics-color-inactive: rgba(255, 255, 255, 0.5) !important;
+  padding-bottom: 105px;
 }
 
 .lyrics-lyricsContainer-LyricsLine {
